initial layout and array

--- a/storePage.html
+++ b/storePage.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <title>Title</title>
+        <link rel="stylesheet" href="styles.css">
+    </head>
+    <header>
+        <div class="header">
+            <div class="headerImage"></div>
+        </div>
+        <div class="cart"></div>
+    </header>
+    <body>
+        <div class="container">
+            <div class="searchFilter"></div>
+            <div id="content"></div>
+        </div>
+    </body>
+    <footer>
+        <script src="store.js"></script>
+    </footer>
 </html>
