--- a/storePage.html
+++ b/storePage.html
@@ -2,18 +2,25 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Title</title>
+        <title>FeEbay</title>
         <link rel="stylesheet" href="styles.css">
     </head>
     <header>
         <div class="header">
-            <div class="headerImage"></div>
+            <div class="headerImage">FeEbay</div>
         </div>
         <div class="cart"></div>
     </header>
     <body>
         <div class="container">
-            <div class="searchFilter"></div>
+            <div class="searchFilter">
+                <ul>
+                    <li>All</li>
+                    <li>Consoles</li>
+                    <li>Accessories</li>
+                    <li>Games</li>
+                </ul>
+            </div>
             <div id="content"></div>
         </div>
     </body>
