--- a/storePage.html
+++ b/storePage.html
@@ -22,6 +22,7 @@
                 </ul>
             </div>
             <div id="content"></div>
+            <div class="cartBar"></div>
         </div>
     </body>
     <footer>
