--- a/storePage.html
+++ b/storePage.html
@@ -22,7 +22,9 @@
                 </ul>
             </div>
             <div id="content"></div>
-            <div id="cartBar"></div>
+            <div id="cartBar">
+                <button type="button" id="checkout">Checkout</button>
+            </div>
         </div>
     </body>
     <footer>
