--- a/storePage.html
+++ b/storePage.html
@@ -7,7 +7,7 @@
     </head>
     <header>
         <div class="header">
-            <div class="headerImage">FeEbay</div>
+            <div class="headerLogo">FeEbay</div>
         </div>
         <div class="cart"></div>
     </header>
