Fixed logo header properties

--- a/storePage.html
+++ b/storePage.html
@@ -7,7 +7,9 @@
     </head>
     <header>
         <div class="header">
-            <div class="headerLogo">FeEbay</div>
+            <div class="headerLogo">
+                <img src="images/logo.jpg">
+            </div>
         </div>
         <div class="cart"></div>
     </header>
