--- a/storePage.html
+++ b/storePage.html
@@ -17,10 +17,10 @@
         <div class="container">
             <div class="searchFilter">
                 <ul>
-                    <li>All</li>
-                    <li>Consoles</li>
-                    <li>Accessories</li>
-                    <li>Games</li>
+                    <li id="all">All</li>
+                    <li id="consoles">Consoles</li>
+                    <li id="accessories">Accessories</li>
+                    <li id = games>Games</li>
                 </ul>
             </div>
             <div id="content"></div>
