--- a/storePage.html
+++ b/storePage.html
@@ -26,6 +26,7 @@
             <div id="content"></div>
             <div id="cartBar">
                 <button type="button" id="checkout">Checkout</button>
+                <div id="total"></div>
                 <div id="cart"></div>
             </div>
         </div>
