--- a/storePage.html
+++ b/storePage.html
@@ -26,8 +26,14 @@
             <div id="content"></div>
             <div id="cartBar">
                 <button type="button" id="checkout">Checkout</button>
+
                 <div id="total"></div>
                 <div id="cart"></div>
+            </div>
+        </div>
+        <div id ="myModal" class="modal">
+            <div id="modal-content">
+                <span class="close">&times;</span>
             </div>
         </div>
     </body>
