--- a/storePage.html
+++ b/storePage.html
@@ -17,7 +17,7 @@
         <div class="container">
             <div class="searchFilter">
                 <ul>
-                    <li id="all">All</li>
+                    <li id="all" class="is-active">All</li>
                     <li id="consoles">Consoles</li>
                     <li id="accessories">Accessories</li>
                     <li id = games>Games</li>
