--- a/storePage.html
+++ b/storePage.html
@@ -7,9 +7,7 @@
     </head>
     <header>
         <div class="header">
-            <div class="headerLogo">
                 <img src="images/logo.jpg">
-            </div>
         </div>
         <div class="cart"></div>
     </header>
@@ -25,10 +23,10 @@
             </div>
             <div id="content"></div>
             <div id="cartBar">
-                <button type="button" id="checkout">Checkout</button>
-
-                <div id="total"></div>
+                <h2 id="cartTitle">Shopping Cart</h2>
                 <div id="cart"></div>
+                <div id="total"></div>
+                <button type="button" id="checkout">Checkout</button>
             </div>
         </div>
         <div id ="myModal" class="modal">
