--- a/storePage.html
+++ b/storePage.html
@@ -24,9 +24,12 @@
             <div id="content"></div>
             <div id="cartBar">
                 <h2 id="cartTitle">Shopping Cart</h2>
+                <p id="emptyCart">Your cart is empty</p>
                 <div id="cart"></div>
-                <div id="total"></div>
-                <button type="button" id="checkout">Checkout</button>
+                <div id="checkoutBox">
+                    <div id="total"></div>
+                    <button type="button" id="checkout">Proceed to checkout</button>
+                </div>
             </div>
         </div>
         <div id ="myModal" class="modal">
